# lux

./: .gitignore  FIXES_APPLIED.md
lux/: test.envrc.example
lux/config/: runtime.exs
lux/guides/: hyperliquid_trading.md
lux/lib/lux/: config.ex
lux/lib/lux/llm/: open_router.ex
lux/lib/lux/prisms/goat_sdk/: uniswap_swap.ex
lux/lib/lux/prisms/hyperliquid/: hyperliquid_cancel_order_prism.ex  hyperliquid_execute_order_prism.ex  hyperliquid_leverage_prism.ex  hyperliquid_liquidation_prism.ex  hyperliquid_margin_prism.ex  hyperliquid_pnl_prism.ex  hyperliquid_risk_assessment_prism.ex
lux/lib/lux/prisms/llm/: llm_cost_tracker.ex  llm_provider_registry.ex  llm_provider_selector.ex
lux/lib/lux/prisms/openrouter/: openrouter_chat_prism.ex  openrouter_models_prism.ex
lux/lib/lux/prisms/pancakeswap/: pancakeswap_compound_prism.ex  pancakeswap_farm_prism.ex  pancakeswap_pool_prism.ex  pancakeswap_security_prism.ex  pancakeswap_swap_prism.ex  pancakeswap_v3_swap_prism.ex
lux/lib/lux/prisms/sushiswap/: sushiswap_bridge_prism.ex  sushiswap_liquidity_prism.ex  sushiswap_pool_prism.ex  sushiswap_security_prism.ex  sushiswap_swap_prism.ex
lux/lib/lux/prisms/telegram/: telegram_engagement_prism.ex  telegram_metrics_prism.ex  telegram_report_prism.ex
lux/lib/lux/prisms/youtube/: youtube_analytics_prism.ex  youtube_auth_prism.ex  youtube_chat_prism.ex  youtube_growth_prism.ex  youtube_livestream_prism.ex  youtube_video_prism.ex
lux/lux/lib/lux/llm/: provider_abstraction.ex
lux/priv/python/: pyproject.toml
lux/test/integration/: hyperliquid_integration_test.exs
(+38 files in other folders)
