[tool.poetry]
name = "lux-python"
version = "0.1.0"
description = "Python components for the Lux framework"
authors = ["Robert Parcus <robertparcus@spectrallabs.xyz>"]
readme = "README.md"
packages = [{include = "lux"}]

[tool.poetry.dependencies]
python = "^3.12.3"
web3 = ">=6.20.3"
eth-account = "^0.13.6"
eth-typing = "^5.0.0"
eth-tester = {extras = ["py-evm"], version = "^0.12.1b1"}
nltk = "^3.9.1"
setuptools = "^75.8.2"
hyperliquid-python-sdk = "^0.10.1"
ckzg = "^2.0.1"
goat-sdk-plugin-uniswap = { git = "https://github.com/goat-sdk/goat.git", subdirectory = "python/src/plugins/uniswap" }
goat-sdk-wallet-evm = { git = "https://github.com/goat-sdk/goat.git", subdirectory = "python/src/wallets/evm" }
goat-sdk-plugin-erc20 = { git = "https://github.com/goat-sdk/goat.git", subdirectory = "python/src/plugins/erc20" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lux --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 